--- a/StudyBigData/pom.xml
+++ b/StudyBigData/pom.xml
@@ -22,6 +22,11 @@
             <artifactId>hadoop-mapreduce-client-app</artifactId>
             <version>2.6.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>1.1.22</version>
+        </dependency>
     </dependencies>
 
 </project>
