--- a/CommonTest/pom.xml
+++ b/CommonTest/pom.xml
@@ -652,6 +652,11 @@
             <artifactId>antlr4-runtime</artifactId>
             <version>4.7</version>
         </dependency>
+        <dependency>
+            <groupId>com.lmax</groupId>
+            <artifactId>disruptor</artifactId>
+            <version>3.4.2</version>
+        </dependency>
 
     </dependencies>
     <repositories>
